[package]
name = "goup"
version = "0.1.0"
authors = ["Andy <andy@straykatlab.dev>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="4", features=["derive"]}
reqwest = {version="0.11", features=["blocking", "json"]}
serde = {version="1.0", features=["derive"]}
regex = {version="1"}
os_info = {version="3", default-features=false}
